--- a/Rainbow.App/Rainbow.App.csproj
+++ b/Rainbow.App/Rainbow.App.csproj
@@ -1,17 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{DC003818-1C25-4B35-9A0F-9C5523AFA8A0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Rainbow</RootNamespace>
-    <AssemblyName>Rainbow.App</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
@@ -27,27 +19,15 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <UseWindowsForms>true</UseWindowsForms>
+    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
     <OutputPath>bin\v3.5\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
     <OutputPath>bin\v3.5\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Rainbow.App.Program</StartupObject>
@@ -56,123 +36,26 @@
     <ApplicationIcon>rainbow.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>bin\v3.5\Debug\</OutputPath>
-    <WarningLevel>4</WarningLevel>
-    <Optimize>false</Optimize>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>bin\v3.5\Release\</OutputPath>
-    <WarningLevel>4</WarningLevel>
     <Optimize>false</Optimize>
-    <Prefer32Bit>false</Prefer32Bit>
     <DocumentationFile>
     </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="App\GUI\AboutBox.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="App\GUI\AboutBox.Designer.cs">
-      <DependentUpon>AboutBox.cs</DependentUpon>
-    </Compile>
-    <Compile Include="App\GUI\Controls\TransparentPictureBox.cs">
+    <Compile Update="App\GUI\Controls\TransparentPictureBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="App\GUI\MainForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="App\GUI\MainForm.Designer.cs">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="App\GUI\Model\ListViewItemComparer.cs" />
-    <Compile Include="App\GUI\Model\NamcoTexturePropertyGridObject.cs" />
-    <Compile Include="App\GUI\Model\PE3DATPropertyGridObject.cs" />
-    <Compile Include="App\GUI\Model\PropertyGridObjectFactory.cs" />
-    <Compile Include="App\GUI\Model\RangedTypeConverter.cs" />
-    <Compile Include="App\GUI\Model\TextureFormatProxy.cs" />
-    <Compile Include="App\GUI\Model\TexturePropertyGridObject.cs" />
-    <Compile Include="App\GUI\Model\TIM2PropertyGridObject.cs" />
-    <Compile Include="App\GUI\Model\TPLTexturePropertyGridObject.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="App\GUI\MainForm.MenuEvents.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <None Include="Properties\AssemblyInfo.templ" />
-    <Compile Include="App\Program.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
-    <Compile Include="App\GUI\MainForm.Impl.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <ProjectReference Include="..\Rainbow.ImgLib\Rainbow.ImgLib.csproj" />
+    <ProjectReference Include="..\nQuant.Core\nQuant.Core.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Rainbow.ImgLib\Rainbow.ImgLib.csproj">
-      <Project>{C4117527-926B-4588-BDE3-53EC241E62B4}</Project>
-      <Name>Rainbow.ImgLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\nQuant.Core\nQuant.Core.csproj">
-      <Project>{A59307EA-FCB0-4110-BC42-0417871C24C4}</Project>
-      <Name>nQuant.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
-      <Visible>False</Visible>
-      <ProductName>Microsoft .NET Framework 4 Client Profile %28x86 and x64%29</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Windows.Installer.4.5">
-      <Visible>False</Visible>
-      <ProductName>Windows Installer 4.5</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="App\GUI\AboutBox.resx">
-      <DependentUpon>AboutBox.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="App\GUI\MainForm.resx">
-      <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="rainbow.ico" />
-    <None Include="rainbow.png" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- Prebuild Tasks -->
   <PropertyGroup>
     <GitVersionFile>Properties\gitversion.txt</GitVersionFile>
     <AssemblyInfoTemplate>Properties\AssemblyInfo.templ</AssemblyInfoTemplate>
@@ -187,11 +70,4 @@
     <WriteLinesToFile File="$(ProjectDir)$(AssemblyInfoOutput)" Lines="[assembly: AssemblyInformationalVersion(&quot;$(OutputGitVersion)&quot;)]" Overwrite="false" />
     <Delete Files="$(GitVersionFile)" />
   </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
